--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css\normalize.css">
     <!-- <link rel="stylesheet" href="D:\Projects\by_me\space_tourism\css\all.min.css"> -->
     <link rel="stylesheet" href="css\all.min.css">
-    <link rel="stylesheet" href="css\main.css">
+    <link rel="stylesheet" href="space_tourism\css\main.css">
     <link rel="stylesheet" href="css\home.css">
     <title> home </title>
 </head>
